--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Home | Brinkmann for Our Supreme Leader</title>
   </head>
   <body>
-    <div class="container" id="container">
+    <div class="landing">
       <header>
         <nav>
-          <a class="nav-item current" href="index.html">Home</a>
+          <!-- <a class="nav-item current" href="index.html">Home</a> -->
           <a class="nav-item" href="about.html">About Her</a>
-          <a class="nav-item" href="admin.html">Her Administration</a>
+          <a class="nav-item" href="about.html#her-team">Her Team</a>
           <a class="nav-item" href="about.html#agenda">Her Agenda</a>
           <a class="nav-item" href="get-involved.html">Get Involved</a>
           <a class="nav-item nav-item-active-white" href="shop.html"
@@ -25,12 +25,8 @@
         </nav>
 
         <span class="open-side-menu">
-          <a href="#" onclick="openSideMenu()">
-            <svg width="30" height="30">
-              <path d="M0,5 30,5" stroke="#ffffff" stroke-width="3" />
-              <path d="M0,14 30,14" stroke="#ffffff" stroke-width="3" />
-              <path d="M0,23 30,23" stroke="#ffffff" stroke-width="3" />
-            </svg>
+          <a class="nav-item" href="#" onclick="openSideMenu()">
+            MENU
           </a>
         </span>
 
