Added background image support for mobile landing
Selected a photo for the mobile landing page, and added the support for the right content positioning

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
           >
         </nav>
 
-        <span class="open-side-menu">
-          <a class="nav-item" href="#" onclick="openSideMenu()">
-            MENU
-          </a>
-        </span>
+        <a class="open-side-menu" href="#" onclick="openSideMenu()">
+          MENU
+        </a>
 
         <div class="side-nav" id="side-menu">
           <a class="close-side-menu" href="#" onclick="closeSideMenu()"
@@ -43,14 +41,16 @@
           <a class="nav-item" href="get-involved.html#bankroll">Bankroll</a>
         </div>
       </header>
-      <section class="showcase">
+      <div class="showcase">
+        <h2 class="tagline">
+          She's badass. You could be too.
+        </h2>
         <img
           class="logo"
-          src="img/main-logo-color.png"
+          src="img/main-logo-white.png"
           alt="Brinkmann for our supreme leader!"
         />
-        <h2 class="tagline">Make The World Great Again!</h2>
-      </section>
+      </div>
     </div>
     <section class="pledge-bar">
       <span class="pledgeCount">2,395,921</span>
