--- a/index.html
+++ b/index.html
@@ -37,13 +37,29 @@
           <a class="nav-item" href="admin.html">Her Administration</a>
           <a class="nav-item" href="about.html#agenda">Her Agenda</a>
           <a class="nav-item" href="get-involved.html">Get Involved</a>
-          <a class="nav-item nav-item-active-red" href="shop.html">Buy Stuff</a>
+          <a class="nav-item" href="shop.html">Buy Stuff</a>
           <a class="nav-item" href="get-involved.html#bankroll">Bankroll</a>
         </div>
       </header>
       <div class="showcase">
         <h2 class="tagline">
           She's badass. You could be too.
+        </h2>
+        <h2 class="tagline">
+          He's happy. You could be too.
+        </h2>
+        <h2 class="tagline">
+          Car fires suck. Don't let it happen to you.
+        </h2>
+        <h2 class="tagline">
+          Be apart of something great.
+        </h2>
+        <h2 class="tagline">
+          Know what's good for you.
+        </h2>
+        <h2 class="tagline curr-tag">
+          Free McLarens. That's right.
+          <a class="link" href="about.html#faq-4">Learn More</a>
         </h2>
         <img
           class="logo"
