Worked on about and support pages, structure

--- a/about.html
+++ b/about.html
@@ -17,9 +17,7 @@
     <header class="container">
       <!-- Main Nav for Fullscreen viewports -->
       <nav>
-        <a class="nav-item current" href="about.html">About Her</a>
-        <a class="nav-item" href="about.html#her-team">Her Team</a>
-        <a class="nav-item" href="about.html#agenda">Her Agenda</a>
+        <a class="nav-item current" href="about.html">About</a>
         <a class="nav-item" href="get-involved.html">Get Involved</a>
         <a class="nav-item nav-item-active-white" href="shop.html">Buy Stuff</a>
         <a class="btn-secondary" href="get-involved.html#bankroll">Bankroll</a>
@@ -45,9 +43,7 @@
           >&times;</a
         >
         <a class="nav-item" href="index.html">Home</a>
-        <a class="nav-item current" href="about.html">About Her</a>
-        <a class="nav-item" href="admin.html">Her Administration</a>
-        <a class="nav-item" href="about.html#agenda">Her Agenda</a>
+        <a class="nav-item current" href="about.html">About</a>
         <a class="nav-item" href="get-involved.html">Get Involved</a>
         <a class="nav-item" href="shop.html">Buy Stuff</a>
         <a class="nav-item" href="get-involved.html#bankroll">Bankroll</a>
