--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <header>
         <nav>
           <!-- <a class="nav-item current" href="index.html">Home</a> -->
-          <a class="nav-item" href="about.html">About Her</a>
-          <a class="nav-item" href="about.html#her-team">Her Team</a>
-          <a class="nav-item" href="about.html#agenda">Her Agenda</a>
+          <a class="nav-item" href="about.html">About</a>
           <a class="nav-item" href="get-involved.html">Get Involved</a>
           <a class="nav-item nav-item-active-white" href="shop.html"
             >Buy Stuff</a
@@ -33,9 +31,7 @@
             >&times;</a
           >
           <a class="nav-item current" href="index.html">Home</a>
-          <a class="nav-item" href="about.html">About Her</a>
-          <a class="nav-item" href="admin.html">Her Administration</a>
-          <a class="nav-item" href="about.html#agenda">Her Agenda</a>
+          <a class="nav-item" href="about.html">About</a>
           <a class="nav-item" href="get-involved.html">Get Involved</a>
           <a class="nav-item" href="shop.html">Buy Stuff</a>
           <a class="nav-item" href="get-involved.html#bankroll">Bankroll</a>
@@ -71,7 +67,7 @@
     <section class="pledge-bar">
       <span class="pledgeCount">2,395,921</span>
       <h3>people have pledged to Brinkmann</h3>
-      <h4>Will You?</h4>
+      <h3>Will You?</h3>
       <a class="btn-primary" href="support.html#pledge">Pledge Now!</a>
     </section>
     <!-- <footer>
