--- a/index.html
+++ b/index.html
@@ -4,83 +4,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Home | Brinkmann for Our Supreme Leader</title>
   </head>
   <body>
-    <div class="landing">
-      <header>
-        <nav>
-          <!-- <a class="nav-item current" href="index.html">Home</a> -->
-          <a class="nav-item" href="about.html">About</a>
-          <a class="nav-item" href="get-involved.html">Get Involved</a>
-          <a class="nav-item nav-item-active-white" href="shop.html"
-            >Buy Stuff</a
-          >
-          <a class="btn-secondary" href="get-involved.html#bankroll"
-            >Bankroll</a
-          >
+    <section id="page" class="hero is-fullheight">
+      <div class="hero-head">
+        <nav
+          class="navbar is-info"
+          role="navigation"
+          aria-label="main navigation"
+        >
+          <div class="navbar-brand">
+            <a
+              role="button"
+              class="navbar-burger burger"
+              aria-label="menu"
+              aria-expanded="false"
+              data-target="navbarBasicExample"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+
+          <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start"></div>
+
+            <div class="navbar-end">
+              <a href="index.html" class="navbar-item">
+                Home
+              </a>
+
+              <div class="navbar-item has-dropdown is-hoverable ">
+                <a href="about.html" class="navbar-link is-arrowless">
+                  About
+                </a>
+
+                <div class="navbar-dropdown">
+                  <a href="about.html#her" class="navbar-item">
+                    About Brinkmann
+                  </a>
+                  <a href="about.html#team" class="navbar-item">
+                    Her Team
+                  </a>
+                  <a href="about.html#agenda" class="navbar-item">
+                    Her Agenda
+                  </a>
+                </div>
+              </div>
+
+              <a href="get-involved.html" class="navbar-item">
+                Get Involved
+              </a>
+
+              <a href="store.html" class="navbar-item">
+                Buy Stuff
+              </a>
+
+              <div class="navbar-item">
+                <div class="buttons">
+                  <a href="tribute.html" class="button is-danger">
+                    <strong>Pay Tribute</strong>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </nav>
-
-        <a class="open-side-menu" href="#" onclick="openSideMenu()">
-          MENU
-        </a>
-
-        <div class="side-nav" id="side-menu">
-          <a class="close-side-menu" href="#" onclick="closeSideMenu()"
-            >&times;</a
-          >
-          <a class="nav-item current" href="index.html">Home</a>
-          <a class="nav-item" href="about.html">About</a>
-          <a class="nav-item" href="get-involved.html">Get Involved</a>
-          <a class="nav-item" href="shop.html">Buy Stuff</a>
-          <a class="nav-item" href="get-involved.html#bankroll">Bankroll</a>
-        </div>
-      </header>
-      <div class="showcase">
-        <h2 class="tagline">
-          She's badass. You could be too.
-        </h2>
-        <h2 class="tagline">
-          He's happy. You could be too.
-        </h2>
-        <h2 class="tagline">
-          Car fires suck. Don't let it happen to you.
-        </h2>
-        <h2 class="tagline">
-          Be apart of something great.
-        </h2>
-        <h2 class="tagline">
-          Know what's good for you.
-        </h2>
-        <h2 class="tagline curr-tag">
-          Free McLarens. That's right.
-          <a class="link" href="about.html#faq-4">Learn More</a>
-        </h2>
-        <img
-          class="logo"
-          src="img/main-logo-white.png"
-          alt="Brinkmann for our supreme leader!"
-        />
       </div>
-    </div>
-    <section class="pledge-bar">
-      <span class="pledgeCount">2,395,921</span>
-      <h3>people have pledged to Brinkmann</h3>
-      <h3>Will You?</h3>
-      <a class="btn-primary" href="support.html#pledge">Pledge Now!</a>
+      <div class="hero-body">
+        <div class="container">
+          <img
+            src="img/main-logo-white.png"
+            alt="Brinkmann 2020 for Our Supreme Leader"
+          />
+        </div>
+      </div>
     </section>
-    <!-- <footer>
-      <p>
-        Made by
-        <a class="img-link" href="http://chasedooley.com" target="_blank"
-          ><img
-            class="cd-monogram"
-            src="img/cd-monogram-color.png"
-            alt="Chase Dooley, web developer"
-        /></a>
-      </p>
-    </footer> -->
+
     <script src="js/main.js"></script>
   </body>
 </html>
