Added netlify form support

--- a/get-involved.html
+++ b/get-involved.html
@@ -107,7 +107,7 @@
         of a revolution and pledge today!
       </p>
       <br />
-      <form>
+      <form netlify name="New Supporters">
         <div class="field">
           <label class="label">Your Full Name</label>
           <div class="control">
