Fixed some errors with text and form

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
           aria-label="main navigation"
         >
           <div class="navbar-brand">
-              <a href="index.html"
+            <a href="index.html"
               ><img
                 class="nav-logo"
                 src="img/main-logo-white.png"
@@ -108,12 +108,12 @@
           Ms. Lindsay Brinkmann is a social studies teacher at DeLand High
           School, teaching awesome classes on American History among other
           historical periods. She connects with her students to build a
-          successful learning environment, and builds a faithful following
-          that's lead to the creation of the Brinkmann 2020 campaign. Ms.
-          Brinkmann started this campaign to do a great service to the world. By
-          enacting strict, just laws and demanding high standards from society,
-          she hopes to change the world for the better. In her spare time, she
-          enjoys sewing quilts and watching Netflix.
+          successful learning environment and builds a faithful following that's
+          lead to the creation of the Brinkmann 2020 campaign. Ms. Brinkmann
+          started this campaign to do a great service to the world. By enacting
+          strict, just laws and demanding high standards from society, she hopes
+          to change the world for the better. In her spare time, she enjoys
+          sewing quilts and watching Netflix.
         </p>
       </article>
       <br />
@@ -140,7 +140,7 @@
         <p>
           Mrs. Goldy is a social studies teacher at DeLand High School, teaching
           classes on history and psychology. She joined the Brinkmann 2020
-          compaign to do her part in making the world great again. Her role is
+          campaign to do her part in making the world great again. Her role is
           assessing the psychological state of Brinkmann's people. She enjoys
           spending time with family and friends outside of the movement.
         </p>
@@ -157,7 +157,7 @@
         <strong>Mrs. Sniffen, Royal Communicator</strong>
         <p>
           Mrs. Sniffen is an English and Journalism teacher at DeLand High. She
-          believes the Brinkmann 2020 campaign is awesome, and joined to make it
+          believes the Brinkmann 2020 campaign is awesome and joined to make it
           succeed. Her role includes communicating the thoughts and wishes of
           the Brinkmann cabinet to the common folk. When she's not working,
           she's teaching kids to write creatively, read, and to be creative
@@ -174,28 +174,35 @@
         <p>
           Ms. Brinkmann's agenda is a five-year plan condensed into a four-year
           plan which is really a terminal plan. It consists of:
-          <div class="content"><ul>
-              <li>Enact a unified government across the world</li>
-              <li>Establish a single prison system, the Spork Islands Complex, for the world</li>
-              <li>Improve education for all, and make higher education better and cheaper</li>
-              <li>Improve the economy</li>
-              <li>Disprove the existence of robotic dolphins</li>
-              <li>Build an underwater base</li>
-              <li>Improve welfare for all</li>
-              <li>Ban ignorance</li>
-              <li>Determine the Fundamental Theorem of the Paranormal</li>
-              <li>Establish some form of world peace</li>
-              <li>Prevent natural disasters and reverse climate change</li>
-              <li>Establish a world healthcare for all</li>
-              <li>and more...</li>
-            </ul></div>
         </p>
+
+        <div class="content">
+          <ul>
+            <li>Enact a unified government across the world</li>
+            <li>
+              Establish a single prison system, the Spork Islands Complex, for
+              the world
+            </li>
+            <li>
+              Improve education for all, and make higher education better and
+              cheaper
+            </li>
+            <li>Improve the economy</li>
+            <li>Disprove the existence of robotic dolphins</li>
+            <li>Build an underwater base</li>
+            <li>Improve welfare for all</li>
+            <li>Ban ignorance</li>
+            <li>Determine the Fundamental Theorem of the Paranormal</li>
+            <li>Establish some form of world peace</li>
+            <li>Prevent natural disasters and reverse climate change</li>
+            <li>Establish a world healthcare for all</li>
+            <li>and more...</li>
+          </ul>
+        </div>
       </article>
       <section class="hero">
-          <div class="hero-body">
-           
-          </div>
-        </section>
+        <div class="hero-body"></div>
+      </section>
     </main>
 
     <script src="js/main.js"></script>
