--- a/tribute.html
+++ b/tribute.html
@@ -110,7 +110,7 @@
           cold, hard cash, and the Brinkmann 2020 campaign is no different. In
           order to survive and win, we need monetary support from you, our
           supporters. With your tribute, we can do all the cool things expected
-          from us - including rallys, cold-calling, advertising, bribery, and
+          from us - including rallies, cold-calling, advertising, bribery, and
           kidnapping and ransoming of public figures<strong>*</strong>. It's
           also how we afford our McLarens. And our expensive lifestyle we always
           wanted.
