--- a/get-involved.html
+++ b/get-involved.html
@@ -107,7 +107,7 @@
         of a revolution and pledge today!
       </p>
       <br />
-      <form netlify name="New Supporters">
+      <form data-netlify="true" action="POST" name="New Supporters">
         <div class="field">
           <label class="label">Your Full Name</label>
           <div class="control">
@@ -115,13 +115,14 @@
               class="input"
               type="text"
               placeholder="First, Middle, Last"
+              name="Name"
             />
           </div>
         </div>
         <div class="field">
           <label class="label">Do you pledge yourself to Brinkmann?</label>
           <span class="select">
-            <select>
+            <select name="Agree to Pledge">
               <option>Yes</option>
               <option>Yes!!</option>
               <option>Absolutely!</option>
@@ -142,7 +143,7 @@
             dangerous?</label
           >
           <span class="select">
-            <select>
+            <select name="Commitment to Task">
               <option>Yes</option>
               <option>Yes!!</option>
               <option>Sure, why not!</option>
@@ -154,7 +155,7 @@
             >Please select your new, <em>permanent</em> occupation:</label
           >
           <span class="select">
-            <select>
+            <select name="Occupation">
               <option>Hard Worker</option>
               <option>Hard Worker</option>
               <option>Hard Worker</option>
@@ -279,11 +280,11 @@
             <label class="label">Do you agree with the above?</label>
           </div>
           <label class="radio">
-            <input type="radio" name="member" />
+            <input type="radio" name="Rules Check" />
             Yes
           </label>
           <label class="radio">
-            <input type="radio" name="member" />
+            <input type="radio" name="Rules Check" />
             Of course I do!
           </label>
         </div>
@@ -325,37 +326,31 @@
               </li>
             </ul>
           </div>
-          <label class="label">Do you agree to the above?</label>
+          <label class="label" name="disclaimer agreement">Do you agree to the above?</label>
           <label class="radio">
-            <input type="radio" name="member" />
+            <input type="radio" name="disclaimer agreement" />
             Yes
           </label>
           <label class="radio">
-            <input type="radio" name="member" />
+            <input type="radio" name="disclaimer agreement" />
             Yup!
           </label>
           <label class="radio">
-            <input type="radio" name="member" />
+            <input type="radio" name="disclaimer agreement" />
             Great, sounds awesome!
           <label class="radio">
-            <input type="radio" name="member" />
+            <input type="radio" name="disclaimer agreement" />
             All hail Ms. Brinkmann!
           </label>
         </div>
-        <div class="field">
-            <label class="label">Please enter your full name as agreement to the pledge.</label>
-            <div class="control">
-              <input
-                class="input"
-                type="text"
-                placeholder="First, Middle, Last"
-              />
-            </div>
-            <br>
-            <div class="control">
-                <button class="button is-info is-large">Submit</button>
+        
+        <br>
+        <div class="control">
+            <div class="field">
+                <div data-netlify-recaptcha="true"></div>
               </div>
-              </div>
+            <button class="button is-info is-large">Submit</button>
+        </div>
       </form>
       <section class="hero">
           <div class="hero-body">
