Fixed a grammar mistake

--- a/tribute.html
+++ b/tribute.html
@@ -387,7 +387,7 @@
       <section class="hero">
         <div class="hero-body">
           <strong>*</strong>Pure hearsay, no evidence or bodies have been found
-          to corroborate these unbiased claims
+          to corroborate these biased claims
         </div>
       </section>
     </main>
